[mqtt] Use AbstractStorageBasedTypeProvider
Includes both homie and homeassistant dynamic things.
It also fixes all ordering issues in both bindings in order to
be consistent in how types are persisted:
 * For Homie, Nodes (channel groups) and Properties (channels)
   are ordered in the way they are defined in $nodes and $properties
 * For Home Assistant, Components are ordered by label. This
   includes both single channel components that are not in a channel
   group, as well as channel groups. We also ensure that on the
   Thing itself non-grouped channels consistently sort before grouped
   channels.

Signed-off-by: Cody Cutrer <cody@cutrer.us>